--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste_retired.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste_retired.html.twig
@@ -49,7 +49,11 @@
 </div>
     <script type="application/javascript" src="{{ asset("/datatables/jquery.dataTables.min.js") }}"></script>
     <link type="text/css" href="{{ asset("/datatables/css/jquery.dataTables.css") }}" rel="stylesheet"/>
+    <script type="application/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
+    <script type="application/javascript" src="//cdn.datatables.net/plug-ins/1.10.7/sorting/datetime-moment.js"></script>
+    {#<script type="application/javascript" src="//cdn.datatables.net/plug-ins/1.10.9/api/page.jumpToData().js"></script>#}
     <script type="text/javascript">
+        $.fn.dataTable.moment( 'DD/MM/YYYY' );
         $("#dtables").dataTable({
             oLanguage: {
                 sSearch: "Rechercher&nbsp;",
