--- a/src/Sesile/MainBundle/Resources/views/Collectivite/new.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Collectivite/new.html.twig
@@ -151,18 +151,21 @@
     {{ form_end(form) }}
     </div>
 
-    <link rel="stylesheet" type="text/css" href="{{ asset("/bootstrap3-wysihtml5/src/bootstrap-wysihtml5.css") }}"/>
+    {#<link rel="stylesheet" type="text/css" href="{{ asset("/bootstrap3-wysihtml5/src/bootstrap-wysihtml5.css") }}"/>#}
     <link rel="stylesheet" type="text/css" href="{{ asset("/bootstrap/css/bootstrap-formhelpers.min.css") }}"/>
-    <script src="{{ asset("/bootstrap3-wysihtml5/lib/js/wysihtml5-0.3.0.js") }}" type="text/javascript"></script>
     <script src="{{ asset("/js/bootstrap-formhelpers.js") }}" type="text/javascript"></script>
+    {# TinyMce #}
+    <script src="{{ asset("js/tinymce/tinymce.min.js") }}"></script>
+{#    <script src="{{ asset("/bootstrap3-wysihtml5/lib/js/wysihtml5-0.3.0.js") }}" type="text/javascript"></script>
     <script src="{{ asset("/bootstrap3-wysihtml5/src/bootstrap3-wysihtml5.js") }}" type="text/javascript"></script>
-    <script src="{{ asset("/bootstrap3-wysihtml5/src/locales/bootstrap-wysihtml5.fr-FR.js") }}"></script>
+    <script src="{{ asset("/bootstrap3-wysihtml5/src/locales/bootstrap-wysihtml5.fr-FR.js") }}"></script>#}
     <script src="{{ asset("/js/drag.js") }}" type="text/javascript"></script>
     <script type="text/javascript">
-        $('textarea').wysihtml5({
+        /*$('textarea').wysihtml5({
             "image": false,
             locale: "fr-FR"
-        });
+        });*/
+
         $('#colorPicker').on('change.bfhcolorpicker',function(){
             $('#sesile_mainbundle_collectivite_couleurVisa').val($(this).val());
         });
