--- a/src/Sesile/MainBundle/Resources/views/Preferences/message_accueil.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Preferences/message_accueil.html.twig
@@ -7,7 +7,7 @@
             &nbsp;&nbsp;&nbsp;Édition du message d'accueil
         </div>
         <form action="{{ path('message_accueil') }}" method="POST">
-            <textarea rows="10" cols="80" name="message">{{ message }}</textarea>
+            <textarea rows="10" id="sesile_mainbundle_collectivite_message" name="message">{{ message }}</textarea>
             <br>
             <br>
             <button type="submit" class="btn btn-success">Enregistrer</button>
@@ -15,7 +15,10 @@
     </div>
 
 
-    <link rel="stylesheet" type="text/css" href="{{ asset("/bootstrap3-wysihtml5/src/bootstrap-wysihtml5.css") }}" />
+    <script src="{{ asset("js/tinymce/tinymce.min.js") }}"></script>
+    <script src="{{ asset("/js/drag.js") }}" type="text/javascript"></script>
+
+    {#<link rel="stylesheet" type="text/css" href="{{ asset("/bootstrap3-wysihtml5/src/bootstrap-wysihtml5.css") }}" />
     <script src="{{ asset("/bootstrap3-wysihtml5/lib/js/wysihtml5-0.3.0.js") }}" type="text/javascript"></script>
     <script src="{{ asset("/bootstrap3-wysihtml5/src/bootstrap3-wysihtml5.js") }}" type="text/javascript"></script>
     <script src="{{ asset("/bootstrap3-wysihtml5/src/locales/bootstrap-wysihtml5.fr-FR.js") }}"></script>
@@ -24,5 +27,5 @@
             "image": false,
              locale: "fr-FR"
         });
-    </script>
+    </script>#}
 {% endblock %}
