--- a/src/Sesile/MainBundle/Resources/views/Preferences/notifications.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Preferences/notifications.html.twig
@@ -11,33 +11,38 @@
                 <span class="glyphicon glyphicon-play"></span>
                 &nbsp;&nbsp;&nbsp;Création d'un classeur
             </div>
-            <textarea rows="10" cols="80" name="textmailnew">{{ textmailnew }}</textarea>
+            <textarea rows="10" name="textmailnew" id="sesile_mainbundle_collectivite_textmailnew">{{ textmailnew }}</textarea>
             <br>
             <div class="titre_form_element">
                 <span class="glyphicon glyphicon-play"></span>
                 &nbsp;&nbsp;&nbsp;Validation d'un classeur
             </div>
-            <textarea rows="10" cols="80" name="textmailwalid">{{ textmailwalid }}</textarea>
+            <textarea rows="10" name="textmailwalid" id="sesile_mainbundle_collectivite_textmailwalid">{{ textmailwalid }}</textarea>
             <br>
             <div class="titre_form_element">
                 <span class="glyphicon glyphicon-play"></span>
                 &nbsp;&nbsp;&nbsp;Refus d'un classeur
             </div>
-            <textarea rows="10" cols="80" name="textmailrefuse">{{ textmailrefuse }}</textarea>
+            <textarea rows="10" name="textmailrefuse" id="sesile_mainbundle_collectivite_textmailrefuse">{{ textmailrefuse }}</textarea>
             <br>
             <br>
             <button type="submit" class="btn btn-success">Enregistrer</button>
         </form>
     </div>
 
-    <link rel="stylesheet" type="text/css" href="{{ asset("/bootstrap3-wysihtml5/src/bootstrap-wysihtml5.css") }}" />
+    <script src="{{ asset("js/tinymce/tinymce.min.js") }}"></script>
+    <script src="{{ asset("/js/drag.js") }}" type="text/javascript"></script>
+
+    {#<link rel="stylesheet" type="text/css" href="{{ asset("/bootstrap3-wysihtml5/src/bootstrap-wysihtml5.css") }}" />
     <script src="{{ asset("/bootstrap3-wysihtml5/lib/js/wysihtml5-0.3.0.js") }}" type="text/javascript"></script>
     <script src="{{ asset("/bootstrap3-wysihtml5/src/bootstrap3-wysihtml5.js") }}" type="text/javascript"></script>
     <script src="{{ asset("/bootstrap3-wysihtml5/src/locales/bootstrap-wysihtml5.fr-FR.js") }}"></script>
+
+
     <script type="text/javascript">
         $('textarea').wysihtml5({
             "image": false,
              locale: "fr-FR"
         });
-    </script>
+    </script>#}
 {% endblock %}
