--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
@@ -1,21 +1,8 @@
 {% extends 'SesileMainBundle:Default:index.html.twig' %}
 
 {% block content %}
-<div class="container">
+{#<div class="container">#}
 
-{#<div class="titre_page">
-    <span class="glyphicon glyphicon-edit"></span>
-    &nbsp;&nbsp;&nbsp;Signer le classeur
-</div>
-
-<h3>{{ classeur.nom }}</h3>#}
-
-
-{#<form id="lacommode" action="{{ path("classeur_valider") }}" method="post">#}
-
-
-    {#<input type="hidden" name="id" value="{{ classeur.id }}">
-    <input type="hidden" name="moncul" value="1">#}
 
 <div class="bloc_page">
 
@@ -52,18 +39,6 @@
                 <div class="col-md-4"><strong>Choix du certificat : </strong></div>
                 <div class="col-md-8"><div id='listecertif' name='listecertif'></div></div>
 
-                {#<div id='listemethod' name='listemethod'></div>#}
-
-                {#<div id='avancement' name='avancement'> Système de signature en cours de chargement..<br/>Ceci peut prendre
-                    plusieurs minutes. Merci d'accepter toutes les demandes qui vous seront formulées par des boites de dialogues.
-                </div>#}
-
-                {#<div class='progress progress-striped active'>
-                    <div class='progress-bar' id='progressbar' role='progressbar' aria-valuenow='100' aria-valuemin='0'
-                         aria-valuemax='100' style='width: 100%'>
-                        <span class='sr-only'>45% Complete</span>
-                    </div>
-                </div>#}
 
             </div>
             <div class="col-md-4">
@@ -99,23 +74,6 @@
             </div>
         </div>
 
-            {#<div class="modal fade" id="IEModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                            <h4 class="modal-title" id="myModalLabel">Aide</h4>
-                        </div>
-                        <div class="modal-body">
-                            Le problème est probablement dû à un blocage des composants JAVA du navigateur, voici comment le résoudre:<br><br>
-                            <img src="{{ asset("/images/iesc.jpg") }}"/>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-primary" data-dismiss="modal">Fermer</button>
-                        </div>
-                    </div>
-                </div>
-            </div>#}
 
             <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                 <div class="modal-dialog" role="document">
@@ -136,28 +94,14 @@
             </div>
 
         </div>
-        {#<div class="col-md-4">
-
-            <div class='pull-right' id="help">
-                <br/>
-                <button type="button" class="btn btn-info" data-dismiss="modal">Le bouton Signer et Valider le classeur ne s’affiche pas… cliquez ici</button>
-            </div>
-            <div class='pull-right' id="bouttons" style="display:none">
-                <br/>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
-                <button type="button" onclick="javascript:signature(); return false;" class="btn btn-success">Signer et valider le classeur</button>
-            </div>
-
-        </div>#}
     </div>
 
-    <div class="row">&nbsp;</div>
+<div class="row">&nbsp;</div>
 
+<div class="bloc_page">
     <div class="row">
         <div class="col-md-12"><h3>Etapes de validations</h3></div>
         <div class="col-md-4">
-            {#<ul class="etape_progress">
-            </ul>#}
 
             <ul class="etape_progress">
                 <li>
@@ -200,9 +144,9 @@
 
     <div class="row">&nbsp;</div>
 
-    <div class="row"><small>URL Aplet : {{ url_applet }}</small></div>
-
+    <!--<div class="row"><small>URL Aplet : {{ url_applet }}</small></div>-->
 </div>
+{#</div>#}
 <script type="text/javascript" src="http://www.java.com/js/deployJava.js"></script>
 
 <script type="text/javascript">
