0002806: Qualité dans la signature et Visa

--- a/src/Sesile/UserBundle/Resources/views/Default/edit.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/edit.html.twig
@@ -74,10 +74,10 @@
         </div>
         <br/>
 
-        {#<div class="label_form label-form-input">
+        <div class="label_form label-form-input">
             {{ form_label(edit_form.qualite) }}
             {{ form_widget(edit_form.qualite) }}
-        </div>#}
+        </div>
         <br/>
 
         <div class="label_form parcou row">
