--- a/src/Sesile/UserBundle/Resources/views/Profile/edit_content.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Profile/edit_content.html.twig
@@ -20,10 +20,10 @@
 </div>
 <br/>
 
-{#<div class="label_form label-form-input">
+<div class="label_form label-form-input">
     {{ form_label(form.qualite, 'Qualité') }}
     {{ form_widget(form.qualite) }}
-</div>#}
+</div>
 <br/>
 
 <div class="label_form parcou row">
