Mantis : 0002807: Correction signature tronquée PRIORITAIRE Edition des diférent formulaires

--- a/src/Sesile/UserBundle/Resources/views/Default/ajout.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/ajout.html.twig
@@ -71,10 +71,10 @@
         </div>
         <br/>
 
-        {#<div class="label_form label-form-input">
+        <div class="label_form label-form-input">
             {{ form_label(form.qualite) }}
             {{ form_widget(form.qualite) }}
-        </div>#}
+        </div>
         <br/>
         {#<div class="label_form parcou">
             {{ form_label(form.file) }}
