Mantis 0002809 : Type hélios : ne pas pouvoir apposer de visa PRIORITAIRE

--- a/src/Sesile/DocumentBundle/Resources/views/Document/show.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/show.html.twig
@@ -45,7 +45,8 @@
                 {% endif %}
 
 
-                {% if doc.type != 'application/pdf' and signature %}
+                {% if doc.type != 'application/pdf' %}
+                {#{% if doc.type != 'application/pdf' and signature %}#}
                     <a id='download' href="{{ path('download_doc', {'id':doc.id}) }}"
                        class="btn btn-default" role="button">
                         <span class="glyphicon glyphicon-download-alt"></span>
