--- a/src/Sesile/MainBundle/Resources/views/Collectivite/edit.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Collectivite/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends "SesileMainBundle:Default:index.html.twig" %}
 
 {% block content %}
-    <div class="bloc_page row">
+    <div class="bloc_page">
         <div class="row row-paddingx">
             <div class="col-lg-12">
                 <div class="titre_page">
@@ -17,28 +17,27 @@
             <div class="col-lg-12">
 
                 <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-md-5 col-sm-8">
                         <div class="row">
-                            <div class="col-md-4">{{ form_label(edit_form.nom) }}</div>
-                            <div class="col-md-8">{{ form_widget(edit_form.nom) }}</div>
+                            <div class="col-md-4 col-sm-6">{{ form_label(edit_form.nom) }}</div>
+                            <div class="col-md-8 col-sm-4">{{ form_widget(edit_form.nom) }}</div>
                         </div>
                         <div class="row">
-                            <div class="col-md-4">{{ form_label(edit_form.domain) }}</div>
-                            <div class="col-md-8">{{ form_widget(edit_form.domain) }}</div>
+                            <div class="col-md-4 col-sm-6">{{ form_label(edit_form.domain) }}</div>
+                            <div class="col-md-8 col-sm-4">{{ form_widget(edit_form.domain) }}</div>
                         </div>
                         <div class="row">
-                            <div class="col-md-4">{{ form_label(edit_form.active) }}</div>
-                            <div class="col-md-8">{{ form_widget(edit_form.active) }}</div>
+                            <div class="col-md-4 col-sm-6">{{ form_label(edit_form.active) }}</div>
+                            <div class="col-md-8 col-sm-4">{{ form_widget(edit_form.active) }}</div>
                         </div>
                         <div class="row">
                             <div class="col-md-4">{{ form_label(edit_form.file) }}</div>
                             <div class="col-md-8">{{ form_widget(edit_form.file) }}</div>
                         </div>
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-md-7 col-sm-4">
                         <div class="row">
-                            <div class="col-md-4"><img src="{{ asset("/uploads/logo_coll/" ~ app.session.get('logo')) }}" width="100%" /></div>
-                            {#<div class="col-md-6"></div>#}
+                            <div class="col-md-3"><img src="{{ asset("/uploads/logo_coll/" ~ app.session.get('logo')) }}" width="100%" /></div>
                         </div>
                     </div>
                 </div>
@@ -60,11 +59,11 @@
         <div class="row row-paddingx">
 
 
-            <div id="myTabContent" class="tab-content col-lg-12">
+            <div id="myTabContent" class="tab-content col-lg-12 col-sm-12 col-xs-12">
                 <div class="tab-pane fade active in" id="mail">
 
-                    <div class="row">
-                        <div class="col-lg-12">
+                    <div class="row row-padding">
+                        <div class="col-lg-12 col-sm-12 col-xs-12">
                             {{ form_label(edit_form.textmailnew) }}
                             {{ form_widget(edit_form.textmailnew) }}
                         </div>
@@ -73,12 +72,12 @@
 
                     <div class="row">
                         <div class="col-md-2"></div>
-                        <img class="gradientawesome col-md-8" src="{{ asset("/images/bg-module-top-shadow.png") }}"/>
+                        <img class="gradientawesome col-md-8 col-sm-8 col-xs-8" src="{{ asset("/images/bg-module-top-shadow.png") }}"/>
                         <div class="col-md-2"></div>
                     </div>
 
                     <div class="row">
-                        <div class="col-lg-12">
+                        <div class="col-lg-12 col-sm-12 col-xs-12">
                             {{ form_label(edit_form.textmailrefuse) }}
                             {{ form_widget(edit_form.textmailrefuse) }}
                         </div>
@@ -86,12 +85,12 @@
 
                     <div class="row">
                         <div class="col-md-2"></div>
-                        <img class="gradientawesome col-md-8" src="{{ asset("/images/bg-module-top-shadow.png") }}"/>
+                        <img class="gradientawesome col-md-8 col-sm-8 col-xs-8" src="{{ asset("/images/bg-module-top-shadow.png") }}"/>
                         <div class="col-md-2"></div>
                     </div>
 
                     <div class="row">
-                        <div class="col-lg-12">
+                        <div class="col-lg-12 col-sm-12 col-xs-12">
                             {{ form_label(edit_form.textmailwalid) }}
                             {{ form_widget(edit_form.textmailwalid) }}
                         </div>
@@ -99,12 +98,12 @@
 
                     <div class="row">
                         <div class="col-md-2"></div>
-                        <img class="gradientawesome col-md-8" src="{{ asset("/images/bg-module-top-shadow.png") }}"/>
+                        <img class="gradientawesome col-md-8 col-sm-8 col-xs-8" src="{{ asset("/images/bg-module-top-shadow.png") }}"/>
                         <div class="col-md-2"></div>
                     </div>
 
                     <div class="row">
-                        <div class="col-lg-12">
+                        <div class="col-lg-12 col-sm-12 col-xs-12">
                             {{ form_label(edit_form.message) }}
                             {{ form_widget(edit_form.message) }}
                         </div>
@@ -209,29 +208,26 @@
     </div>
 
 
-    {#<script src="//cdn.tinymce.com/4/tinymce.min.js"></script>#}
-    {#<script src="//cdnjs.cloudflare.com/ajax/libs/tinymce/4.3.0/jquery.tinymce.min.js"></script>#}
-    <script src="{{ asset("js/tinymce/tinymce.min.js") }}"></script>
-    {# Pour le color picker #}
+    <script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
+    {#<script src="{{ asset("js/tinymce/tinymce.min.js") }}"></script>#}
 
+    {# Pour le color picker #}
     <link rel="stylesheet" type="text/css" href="{{ asset("/bootstrap/css/bootstrap-formhelpers.min.css") }}"/>
     <script src="{{ asset("/js/bootstrap-formhelpers.js") }}" type="text/javascript"></script>
-    {#<link rel="stylesheet" type="text/css" href="{{ asset("/bootstrap3-wysihtml5/src/bootstrap-wysihtml5.css") }}" />
-    {#<script src="{{ asset("/bootstrap3-wysihtml5/lib/js/wysihtml5-0.3.0.js") }}" type="text/javascript"></script>
-    <script src="{{ asset("/bootstrap3-wysihtml5/src/bootstrap3-wysihtml5.js") }}" type="text/javascript"></script>
-    <script src="{{ asset("/bootstrap3-wysihtml5/src/locales/bootstrap-wysihtml5.fr-FR.js") }}"></script>#}
     <script src="{{ asset("/js/drag.js") }}" type="text/javascript"></script>
+    <script src="{{ asset("/js/bootstrap-filestyle.min.js") }}" type="text/javascript"></script>
     <script type="text/javascript">
 
-        $(window).scroll(function() {
-
-        });
-
-        /*$('textarea').wysihtml5({
-            "image": false,
-            locale: "fr-FR"
-        });*/
         $(document).ready(function(){
+
+            // Personnalisation de l input file
+            $(":file").filestyle({
+                buttonBefore: true,
+                size: "sm",
+                buttonText: "&nbsp;Télécharger une image",
+                badge: false
+            });
+
             couleurVisa = $('#sesile_mainbundle_collectivite_couleurVisa').val();
             if (couleurVisa.length == 0) {
                 $('#colorPicker').val("#454545");
