--- a/src/Sesile/MainBundle/Resources/views/Collectivite/new.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Collectivite/new.html.twig
@@ -21,7 +21,7 @@
         </div>
         <div class="row">
             <div class="col-md-3">{{ form_label(form.file) }}</div>
-            <div class="col-md-9">{{ form_widget(form.file) }}</div>
+            <div class="col-md-5">{{ form_widget(form.file) }}</div>
         </div>
         <br>
         <ul class="nav nav-tabs">
@@ -151,20 +151,24 @@
     {{ form_end(form) }}
     </div>
 
-    {#<link rel="stylesheet" type="text/css" href="{{ asset("/bootstrap3-wysihtml5/src/bootstrap-wysihtml5.css") }}"/>#}
     <link rel="stylesheet" type="text/css" href="{{ asset("/bootstrap/css/bootstrap-formhelpers.min.css") }}"/>
     <script src="{{ asset("/js/bootstrap-formhelpers.js") }}" type="text/javascript"></script>
     {# TinyMce #}
     <script src="{{ asset("js/tinymce/tinymce.min.js") }}"></script>
-{#    <script src="{{ asset("/bootstrap3-wysihtml5/lib/js/wysihtml5-0.3.0.js") }}" type="text/javascript"></script>
-    <script src="{{ asset("/bootstrap3-wysihtml5/src/bootstrap3-wysihtml5.js") }}" type="text/javascript"></script>
-    <script src="{{ asset("/bootstrap3-wysihtml5/src/locales/bootstrap-wysihtml5.fr-FR.js") }}"></script>#}
     <script src="{{ asset("/js/drag.js") }}" type="text/javascript"></script>
+    <script src="{{ asset("/js/bootstrap-filestyle.min.js") }}" type="text/javascript"></script>
     <script type="text/javascript">
-        /*$('textarea').wysihtml5({
-            "image": false,
-            locale: "fr-FR"
-        });*/
+
+        $(document).ready(function() {
+
+            // Personnalisation de l input file
+            $(":file").filestyle({
+                buttonBefore: true,
+                size: "sm",
+                buttonText: "&nbsp;Télécharger une image",
+                badge: false
+            });
+        });
 
         $('#colorPicker').on('change.bfhcolorpicker',function(){
             $('#sesile_mainbundle_collectivite_couleurVisa').val($(this).val());
