--- a/src/Sesile/UserBundle/Resources/views/Default/ajout.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/ajout.html.twig
@@ -81,7 +81,45 @@
             {{ form_widget(form.file) }}
         </div>#}
 
-        <div class="label_form parcou">
+        <div class="label_form parcou row">
+
+            <div class="col-md-4">
+                {{ form_label(form.file) }}
+            </div>
+            <div class="col-md-8">
+                <div class="row">
+                    {{ form_widget(form.file, {'attr': { 'class' : 'upload_image', 'placeholder': ''} } ) }}
+                </div>
+                <div class="row">
+                    {% if entity.path is defined and entity.path is not null %}
+                        <img class="col-md-4 col-md-push-4" src="{{ asset(upload_path ~ entity.path) }}"/>
+                    {% else %}
+                        <img class="col-md-4 col-md-push-4" src="{{ asset('/images/imghomme.png') }}"/>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+
+        <br>
+
+        <div class="label_form parcouSignature row">
+
+            <div class="col-md-4">
+                {{ form_label(form.fileSignature) }}
+            </div>
+            <div class="col-md-8">
+                <div class="row">
+                    {{ form_widget(form.fileSignature, {'attr': { 'class' : 'upload_image', 'placeholder': ''} } ) }}
+                </div>
+                <div class="row">
+                    {% if entity.pathSignature is defined and entity.pathSignature is not null %}
+                        <img class="col-md-6 col-md-push-3" src="{{ asset(upload_path_signatures ~ entity.pathSignature) }}"/>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+
+        {#<div class="label_form parcou">
 
             <label class="lbl_avatar">Avatar</label>
             <button type="button" class="btn_avatar">
@@ -112,7 +150,6 @@
         </div>
         <script type="text/javascript">
             $(".btn_signature").click(function () {
-               // alert('ta race');
                 $(".parcouSignature input[type='file']").trigger("click");
             });
 
@@ -120,7 +157,7 @@
                 var nom_fichierSignature = e.target.files[0].name;
                 $('.nom_signature').text(nom_fichierSignature);
             });
-        </script>
+        </script>#}
         <br/>
 
         <div class="label_form pickuser">
@@ -198,7 +235,13 @@
 
 
 
-
+    <script src="{{ asset("/js/bootstrap-filestyle.min.js") }}" type="text/javascript"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            // Personnalisation de l input file
+            $(":file").filestyle({/*input: false, */buttonBefore: true, size: "sm", buttonText: "&nbsp;Télécharger une image", badge: false});
+        });
+    </script>
 
 
     {% if is_granted('ROLE_SUPER_ADMIN') %}
