--- a/web/css/style.css
+++ b/web/css/style.css
@@ -648,6 +648,9 @@ select [name=user] {
 
 }
 
+.label_form .bootstrap-filestyle input {
+	padding-left: 0;
+}
 .label_form input {
     width: 100%;
     height: 1.8em;
