0002807: Correction signature tronquée PRIORITAIRE suite Mise en place d'un retour à la ligne automatique

--- a/src/Sesile/UserBundle/Resources/views/Default/edit.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/edit.html.twig
@@ -76,7 +76,7 @@
 
         <div class="label_form label-form-input">
             {{ form_label(edit_form.qualite) }}
-            {{ form_widget(edit_form.qualite) }}
+            {{ form_widget(edit_form.qualite, {'attr': {'wrap': 'hard'}}) }}
         </div>
         <br/>
 
