--- a/src/Sesile/UserBundle/Resources/views/Profile/edit_content.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Profile/edit_content.html.twig
@@ -22,7 +22,7 @@
 
 <div class="label_form label-form-input">
     {{ form_label(form.qualite, 'Qualité') }}
-    {{ form_widget(form.qualite) }}
+    {{ form_widget(form.qualite, {'attr': {'wrap': 'hard'}}) }}
 </div>
 <br/>
 
