--- a/src/Sesile/UserBundle/Resources/views/Default/ajout.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/ajout.html.twig
@@ -73,7 +73,7 @@
 
         <div class="label_form label-form-input">
             {{ form_label(form.qualite) }}
-            {{ form_widget(form.qualite) }}
+            {{ form_widget(form.qualite, {'attr': {'wrap': 'hard'}}) }}
         </div>
         <br/>
         {#<div class="label_form parcou">
